# Babel

./: .env.example  .gitignore  .impeccable.md  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  docker-compose.yml  install.sh  start.sh
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/babel/: api.py  client.py  clock.py  commander.py  db.py  decision.py  drive_mapping.py  engine.py  hooks.py  llm.py  memory.py  models.py  mvu.py  physics.py  policies.py  prompts.py  psyche_bridge.py  report.py  significance.py  state.py  stimulus.py  validator.py
backend/babel/routes/: agents.py  assets.py  enrichment.py  oracle.py  seeds.py  timeline.py  worlds.py
backend/babel/seeds/: apocalypse.yaml  cyber_bar.yaml  iron_throne.yaml  mvu.yaml
backend/docs/: PSYCHE_ASSESSMENT.md
backend/tests/: benchmark_llm.py  benchmark_scorecard.py  conftest.py  test_agent_physics.py  test_api_integration.py  test_db_roundtrip.py  test_drive_mapping.py  test_engine_lifecycle.py  test_event_visibility.py  test_external_decision.py  test_external_e2e.py  test_fork.py  test_goals.py  test_human_decision.py  test_llm_seed_normalization.py  test_medium_independence.py  test_memory_v2.py  test_mvu.py  test_oracle_prompt_language.py  test_physics.py  test_psyche_bridge.py  test_report.py  test_robustness.py  test_second_order_emergence.py  test_seed_protocol.py  test_significance.py  test_stability.py  test_world_authority.py  test_world_kernel.py
design/: animations.css  babel.css  base.css  components.css  preview.html  tailwind.preset.js  tokens.css
(+100 files in other folders)
